--- a/crates/cairo-casm/Cargo.toml
+++ b/crates/cairo-casm/Cargo.toml
@@ -11,7 +11,7 @@ cairo-vm.workspace = true
 thiserror.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 indoc.workspace = true
 
 [dev-dependencies]
