--- a/crates/cairo-diagnostics/Cargo.toml
+++ b/crates/cairo-diagnostics/Cargo.toml
@@ -7,13 +7,13 @@ license-file.workspace = true
 description = "Diagnostic utilities."
 
 [dependencies]
-cairo-utils = { path = "../cairo-utils" }
-cairo-filesystem = { path = "../cairo-filesystem" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
+cairo-filesystem = { path = "../cairo-filesystem", version = "0.1.0" }
 itertools.workspace = true
 salsa.workspace = true
 
 [dev-dependencies]
-cairo-proc-macros = { path = "../cairo-proc-macros" }
+cairo-proc-macros = { path = "../cairo-proc-macros", version = "0.1.0" }
 env_logger.workspace = true
 indoc.workspace = true
 pretty_assertions.workspace = true
