--- a/crates/cairo-language-server/Cargo.toml
+++ b/crates/cairo-language-server/Cargo.toml
@@ -11,25 +11,25 @@ name = "cairo-language-server"
 path = "src/bin/language_server.rs"
 
 [dependencies]
-cairo-compiler = { path = "../cairo-compiler" }
-cairo-defs = { path = "../cairo-defs" }
-cairo-debug = { path = "../cairo-debug" }
-cairo-diagnostics = { path = "../cairo-diagnostics" }
-cairo-lowering = { path = "../cairo-lowering" }
-cairo-semantic = { path = "../cairo-semantic" }
-cairo-formatter = { path = "../cairo-formatter" }
-cairo-parser = { path = "../cairo-parser" }
-cairo-plugins = { path = "../cairo-plugins" }
-cairo-project = { path = "../cairo-project" }
-cairo-starknet = { path = "../cairo-starknet" }
-cairo-syntax = { path = "../cairo-syntax" }
-cairo-filesystem = { path = "../cairo-filesystem" }
+cairo-compiler = { path = "../cairo-compiler", version = "0.1.0" }
+cairo-defs = { path = "../cairo-defs", version = "0.1.0" }
+cairo-debug = { path = "../cairo-debug", version = "0.1.0" }
+cairo-diagnostics = { path = "../cairo-diagnostics", version = "0.1.0" }
+cairo-lowering = { path = "../cairo-lowering", version = "0.1.0" }
+cairo-semantic = { path = "../cairo-semantic", version = "0.1.0" }
+cairo-formatter = { path = "../cairo-formatter", version = "0.1.0" }
+cairo-parser = { path = "../cairo-parser", version = "0.1.0" }
+cairo-plugins = { path = "../cairo-plugins", version = "0.1.0" }
+cairo-project = { path = "../cairo-project", version = "0.1.0" }
+cairo-starknet = { path = "../cairo-starknet", version = "0.1.0" }
+cairo-syntax = { path = "../cairo-syntax", version = "0.1.0" }
+cairo-filesystem = { path = "../cairo-filesystem", version = "0.1.0" }
 tokio.workspace = true
 tower-lsp.workspace = true
 lsp.workspace = true
 serde_json.workspace = true
 salsa.workspace = true
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 serde = { version = "1.0.34", features = ["derive"] }
 
 [dev-dependencies]
