--- a/crates/cairo-parser/Cargo.toml
+++ b/crates/cairo-parser/Cargo.toml
@@ -11,19 +11,19 @@ fix_parser_tests = ["cairo-utils/testing"]
 
 [dependencies]
 colored.workspace = true
-cairo-diagnostics = { path = "../cairo-diagnostics" }
-cairo-filesystem = { path = "../cairo-filesystem" }
+cairo-diagnostics = { path = "../cairo-diagnostics", version = "0.1.0" }
+cairo-filesystem = { path = "../cairo-filesystem", version = "0.1.0" }
 itertools.workspace = true
 log.workspace = true
 salsa.workspace = true
 smol_str.workspace = true
-cairo-syntax = { path = "../cairo-syntax" }
-cairo-syntax-codegen = { path = "../cairo-syntax-codegen" }
-cairo-utils = { path = "../cairo-utils" }
+cairo-syntax = { path = "../cairo-syntax", version = "0.1.0" }
+cairo-syntax-codegen = { path = "../cairo-syntax-codegen", version = "0.1.0" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 
 [dev-dependencies]
 env_logger.workspace = true
 pretty_assertions.workspace = true
 test-case.workspace = true
 test-log.workspace = true
-cairo-test-utils = { path = "../cairo-test-utils" }
+cairo-test-utils = { path = "../cairo-test-utils", version = "0.1.0" }
