--- a/crates/cairo-semantic/Cargo.toml
+++ b/crates/cairo-semantic/Cargo.toml
@@ -10,22 +10,22 @@ description = "Cairo semantic model."
 testing = []
 
 [dependencies]
-cairo-defs = { path = "../cairo-defs" }
-cairo-debug = { path = "../cairo-debug" }
-cairo-diagnostics = { path = "../cairo-diagnostics" }
-cairo-proc-macros = { path = "../cairo-proc-macros" }
-cairo-filesystem = { path = "../cairo-filesystem" }
+cairo-defs = { path = "../cairo-defs", version = "0.1.0" }
+cairo-debug = { path = "../cairo-debug", version = "0.1.0" }
+cairo-diagnostics = { path = "../cairo-diagnostics", version = "0.1.0" }
+cairo-proc-macros = { path = "../cairo-proc-macros", version = "0.1.0" }
+cairo-filesystem = { path = "../cairo-filesystem", version = "0.1.0" }
 id-arena.workspace = true
 itertools.workspace = true
-cairo-parser = { path = "../cairo-parser" }
+cairo-parser = { path = "../cairo-parser", version = "0.1.0" }
 # TODO(spapini): Only in testing feature.
 pretty_assertions.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 salsa.workspace = true
 smol_str.workspace = true
-cairo-syntax = { path = "../cairo-syntax" }
-cairo-utils = { path = "../cairo-utils" }
+cairo-syntax = { path = "../cairo-syntax", version = "0.1.0" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 unescaper.workspace = true
 
 [dev-dependencies]
@@ -33,8 +33,8 @@ assert_matches.workspace = true
 env_logger.workspace = true
 indoc.workspace = true
 log.workspace = true
-cairo-plugins = { path = "../cairo-plugins" }
+cairo-plugins = { path = "../cairo-plugins", version = "0.1.0" }
 pretty_assertions.workspace = true
 test-log.workspace = true
-cairo-test-utils = { path = "../cairo-test-utils" }
+cairo-test-utils = { path = "../cairo-test-utils", version = "0.1.0" }
 test-case.workspace = true
