--- a/crates/cairo-sierra-to-casm/Cargo.toml
+++ b/crates/cairo-sierra-to-casm/Cargo.toml
@@ -11,17 +11,17 @@ testing = []
 
 [dependencies]
 assert_matches.workspace = true
-cairo-casm = { path = "../cairo-casm" }
+cairo-casm = { path = "../cairo-casm", version = "0.1.0" }
 clap.workspace = true
 itertools.workspace = true
 log.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
-cairo-sierra = { path = "../cairo-sierra" }
-cairo-sierra-ap-change = { path = "../cairo-sierra-ap-change" }
-cairo-sierra-gas = { path = "../cairo-sierra-gas" }
+cairo-sierra = { path = "../cairo-sierra", version = "0.1.0" }
+cairo-sierra-ap-change = { path = "../cairo-sierra-ap-change", version = "0.1.0" }
+cairo-sierra-gas = { path = "../cairo-sierra-gas", version = "0.1.0" }
 thiserror.workspace = true
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 
 [dev-dependencies]
 env_logger.workspace = true
