--- a/crates/cairo-syntax-codegen/Cargo.toml
+++ b/crates/cairo-syntax-codegen/Cargo.toml
@@ -9,16 +9,16 @@ description = "Cairo syntax code generation."
 [package.metadata.cargo-udeps.ignore]
 normal = ["cairo-syntax"]
 
-[[bin]]
-name = "cairo-generate-syntax"
-path = "src/bin/generate_syntax.rs"
-
 [dependencies]
 genco.workspace = true
 log.workspace = true
 xshell.workspace = true
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 
 [dev-dependencies]
 env_logger.workspace = true
 test-log.workspace = true
+
+[[bin]]
+name = "cairo-generate-syntax"
+path = "src/generate_syntax.rs"
