--- a/crates/cairo-syntax/Cargo.toml
+++ b/crates/cairo-syntax/Cargo.toml
@@ -7,11 +7,11 @@ license-file.workspace = true
 description = "Cairo syntax representation."
 
 [dependencies]
-cairo-debug = { path = "../cairo-debug" }
-cairo-filesystem = { path = "../cairo-filesystem" }
+cairo-debug = { path = "../cairo-debug", version = "0.1.0" }
+cairo-filesystem = { path = "../cairo-filesystem", version = "0.1.0" }
 salsa.workspace = true
 smol_str.workspace = true
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 
 [dev-dependencies]
 env_logger.workspace = true
