--- a/crates/cairo-test-utils/Cargo.toml
+++ b/crates/cairo-test-utils/Cargo.toml
@@ -7,7 +7,7 @@ license-file.workspace = true
 description = "Utilities for writing tests in the Cairo compiler project."
 
 [dependencies]
-cairo-utils = { path = "../cairo-utils" }
+cairo-utils = { path = "../cairo-utils", version = "0.1.0" }
 log.workspace = true
 env_logger.workspace = true
 pretty_assertions.workspace = true
