Added formatting into short string for debug prints. (#1661)

--- a/crates/cairo-lang-utils/Cargo.toml
+++ b/crates/cairo-lang-utils/Cargo.toml
@@ -15,6 +15,7 @@ env_logger.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
 log.workspace = true
+num-bigint.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
