--- a/crates/cairo-lang-casm/Cargo.toml
+++ b/crates/cairo-lang-casm/Cargo.toml
@@ -9,6 +9,7 @@ description = "Cairo assembly encoding."
 [dependencies]
 thiserror.workspace = true
 num-bigint.workspace = true
+num-traits.workspace = true
 cairo-lang-utils = { path = "../cairo-lang-utils", version = "0.1.0" }
 indoc.workspace = true
 
