--- a/crates/cairo-lang-syntax/Cargo.toml
+++ b/crates/cairo-lang-syntax/Cargo.toml
@@ -12,6 +12,7 @@ cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "0.1.0" }
 salsa.workspace = true
 smol_str.workspace = true
 cairo-lang-utils = { path = "../cairo-lang-utils", version = "0.1.0" }
+substring.workspace = true
 
 [dev-dependencies]
 env_logger.workspace = true
