Using new and fixed version of cairo-vm. (#1741)

--- a/crates/cairo-lang-runner/Cargo.toml
+++ b/crates/cairo-lang-runner/Cargo.toml
@@ -10,6 +10,7 @@ description = "Basic cairo runner."
 anyhow.workspace = true
 ark-ff.workspace = true
 ark-std.workspace = true
+cairo-felt.workspace = true
 cairo-vm.workspace = true
 clap.workspace = true
 cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "0.1.0" }
