--- a/crates/cairo-lang-test-runner/Cargo.toml
+++ b/crates/cairo-lang-test-runner/Cargo.toml
@@ -8,6 +8,7 @@ description = "Cairo tests runner. Used to run tests written in Cairo."
 
 [dependencies]
 anyhow.workspace = true
+cairo-felt.workspace = true
 cairo-vm.workspace = true
 cairo-lang-casm = { path = "../cairo-lang-casm", version = "0.1.0" }
 clap.workspace = true
