--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,6 +8,7 @@ description = ""
 
 [dev-dependencies]
 assert_matches.workspace = true
+cairo-felt.workspace = true
 cairo-lang-casm = { path = "../crates/cairo-lang-casm", version = "0.1.0" }
 cairo-lang-compiler = { path = "../crates/cairo-lang-compiler", version = "0.1.0" }
 cairo-lang-defs = { path = "../crates/cairo-lang-defs", version = "0.1.0" }
