--- a/crates/cairo-lang-sierra-gas/Cargo.toml
+++ b/crates/cairo-lang-sierra-gas/Cargo.toml
@@ -18,3 +18,4 @@ env_logger.workspace = true
 indoc.workspace = true
 test-case.workspace = true
 test-log.workspace = true
+pretty_assertions.workspace = true
