Use testing framework for solve_gas test.

--- a/crates/cairo-lang-sierra-gas/Cargo.toml
+++ b/crates/cairo-lang-sierra-gas/Cargo.toml
@@ -19,3 +19,4 @@ indoc.workspace = true
 test-case.workspace = true
 test-log.workspace = true
 pretty_assertions.workspace = true
+cairo-lang-test-utils = { path = "../cairo-lang-test-utils", version = "0.1.0" }
