--- a/crates/cairo-lang-sierra-gas/Cargo.toml
+++ b/crates/cairo-lang-sierra-gas/Cargo.toml
@@ -9,6 +9,7 @@ description = "Sierra gas computation."
 [dependencies]
 itertools.workspace = true
 cairo-lang-sierra = { path = "../cairo-lang-sierra", version = "0.1.0" }
+cairo-lang-sierra-ap-change = { path = "../cairo-lang-sierra-ap-change", version = "0.1.0" }
 cairo-lang-eq-solver = { path = "../cairo-lang-eq-solver", version = "0.1.0" }
 thiserror.workspace = true
 cairo-lang-utils = { path = "../cairo-lang-utils", version = "0.1.0" }
